# rust0computer

./: Cargo.toml  README.md  build.sh  js0run.sh  rust0.sh  test_compiler.sh  test_js0.sh  test_nn.sh
_data/ll/: main_fact.ll
_data/ll0/: main_arith.ll  main_block.ll  main_bool_logic.ll  main_if.ll  main_ops.ll
ai/nn/: Cargo.toml
ai/nn/src/: main.rs
compiler/ir0vm/: Cargo.toml
compiler/js0/: build.sh  js0c.rs
compiler/js0/_more/js0all/: README.md  js0run.sh
compiler/js0c/: build.sh
compiler/js0c/book/: 01-overview.md  02-language-design.md  05-p0c-design.md  06-vm0-design.md  07-ir0c-design.md  09-build-and-run.md  10-code-walkthrough.md  11-architecture.md
compiler/js0c/p0/: fact  fact.ll  fact.s  json  json.ll  json.s  loop  loop.ll  loop.s  syscall  syscall.ll  syscall.s
compiler/js0c/src/: lib0.rs
compiler/js0c/version/01-expc/: expc.md
compiler/js0c/version/02-genir/: expc  expc.md
compiler/js0c/version/03-assign/: a.out
compiler/js0c/version/04-quadruples/: compiler
compiler/js0c/version/05-function/: compiler.c
compiler/js0c/version/06-vm/: compiler.c
compiler/js0c/version/07-if/: compiler.c
compiler/js0c/version/08-comment_v1/: compiler2
compiler/ll0/vm/: Cargo.toml
compiler/qd0/: build.sh  qd0c.rs  qd0vm.rs
compiler/rust0c/: Cargo.toml  Cargo.toml._bak
eda/verilog0/: Cargo.toml  README.md  test.sh
eda/verilog0/src/: codegen.rs  elaborator.rs  lexer.rs  main.rs  parser.rs  vm.rs
eda/verilog0/v/: half_adder.v  monitor_test.v  tb_delay.v  top.v
net/telnet/: telnet_client.rs  telnet_server.rs
(+54 files in other folders)
